objects/OSM_Subscription_Account_Provision__c.object
<CustomObject>
    <description>Junction Object between CC Subscriptions and Account Features&amp;Access object for Provisioning.</description>
    <fields>
        <fullName>Account_Features_Access__c</fullName>
        <label>Account Features &amp; Access</label>
        <referenceTo>IAM_Application__c</referenceTo>
        <relationshipLabel>OSM Subscription Account Provisions</relationshipLabel>
        <relationshipName>OSM_Subscription_Account_Provisions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CC_Subscription__c</fullName>
        <label>CC Subscription</label>
        <referenceTo>ccrz__E_Subscription__c</referenceTo>
        <relationshipLabel>OSM Subscription Account Provisions</relationshipLabel>
        <relationshipName>OSM_Subscription_Account_Provisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Subscription_Quantity__c</fullName>
        <label>Subscription Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <label>Subscription Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Count__c</fullName>
        <label>User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isSubscriptionStarted__c</fullName>
        <label>isSubscriptionStarted</label>
        <type>Date</type>
    </fields>
    <label>OSM Subscription Account Provision</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CC_Subscription__c</columns>
        <columns>User_Count__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{0000000000}</displayFormat>
        <label>OSM Subscription Account Provision Numbe</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OSM Subscription Account Provisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>